# signalpro-pricing-strategy

./: Dockerfile  pyproject.toml
knowledge/: signalpro_pricing_guide.txt
src/signalpro_pricing_strategy/: crew.py  discord_bot.py  main.py
src/signalpro_pricing_strategy/config/: agents.yaml  tasks.yaml
src/signalpro_pricing_strategy/tools/: __init__.py
