[project]
name = "signalpro_pricing_strategy"
version = "0.1.0"
description = "SignalPro Pricing Strategy & Business Model Expert - AI-powered pricing design system"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,anthropic]==1.11.1",
    "discord.py>=2.4",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
signalpro_pricing_strategy = "signalpro_pricing_strategy.main:run"
run_crew = "signalpro_pricing_strategy.main:run"
run_from_file = "signalpro_pricing_strategy.main:run_from_file"
run_with_trigger = "signalpro_pricing_strategy.main:run_with_trigger"
run_discord_bot = "signalpro_pricing_strategy.discord_bot:main"
train = "signalpro_pricing_strategy.main:train"
replay = "signalpro_pricing_strategy.main:replay"
test = "signalpro_pricing_strategy.main:test"
